[project]
name = "weather-mcp"
version = "0.1.0"
description = "Streamable HTTP MCP server for weather reports via Open-Meteo"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
]

[project.scripts]
weather-mcp = "server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
